--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apollo-upload-client": "^16.0.0",
     "bootstrap": "^5.1.2",
     "graphql": "^15.6.0",
     "normalize.css": "^8.0.1",
