--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.00",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
