--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-markdown": "^7.1.1",
